--- a/res/xml/tiny_preferences.xml
+++ b/res/xml/tiny_preferences.xml
@@ -58,6 +58,15 @@
                 </CheckBoxPreference>
             </PreferenceCategory>
             <PreferenceCategory
+                android:key="@string/pre_category_icon_key"
+                android:title="@string/pre_category_icon_title" >
+                <CheckBoxPreference
+                    android:defaultValue="@string/pre_icon_nowifi_default"
+                    android:key="@string/pre_icon_nowifi_key"
+                    android:summary="@string/pre_icon_nowifi_summary"
+                    android:title="@string/pre_icon_nowifi_title" />
+            </PreferenceCategory>
+            <PreferenceCategory
                 android:key="@string/pre_category_sound_key"
                 android:title="@string/pre_category_sound_title" >
                 <CheckBoxPreference
