--- a/res/xml/tiny_preferences.xml
+++ b/res/xml/tiny_preferences.xml
@@ -62,12 +62,14 @@
                 android:title="@string/pre_category_icon_title" >
                 <CheckBoxPreference
                     android:defaultValue="@bool/pre_notification_icon_default"
+                    android:dependency="@string/pre_notification_key"
                     android:enabled="false"
                     android:key="@string/pre_notification_icon_key"
                     android:summary="@string/pre_notification_icon_summary"
                     android:title="@string/pre_notification_icon_title" />
                 <CheckBoxPreference
                     android:defaultValue="@bool/pre_icon_nowifi_default"
+                    android:dependency="@string/pre_notification_key"
                     android:key="@string/pre_icon_nowifi_key"
                     android:summary="@string/pre_icon_nowifi_summary"
                     android:title="@string/pre_icon_nowifi_title" />
